--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    
-</head>
-<body>
-    BONJOUR
-<title>Bientot le wk !</title>
-</body>
-</html>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>hello</title>
+        <h1>test</h1>
+        <style>
+            body{
+                background-color: rgba(0, 0, 0, 0.479);
+            }
+        </style>
+    </head>
+    <body>
+        BONJOUR
+    </body>
+    </html>
